--- a/master.css
+++ b/master.css
@@ -1,27 +1,98 @@
-html,
-body,
-ul,
-ol {
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   margin: 0;
   padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 10px;
+  font-family: "Lato", Helvetica, Arial, sans;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 * {
-  font-family: sans-serif;
+  font-family: "Lato", Helvetica, Arial, sans;
+  box-sizing: border-box;
+}
+
+.section-5, .section-4, .section-3, .section-2, .section-1 {
+  width: 100%;
+  height: 300pt;
+  color: #eeeeee;
 }
 
 .section-1 {
-  background-image: linear-gradient(to bottom right, rgba(0, 47, 75, 0.5), rgba(220, 66, 37, 0.5)), url("red-forest.jpg");
+  position: relative;
+  background-image: linear-gradient(to bottom right, rgba(0, 47, 75, 0.7), rgba(220, 66, 37, 0.7));
+  /*,url("red-forest.jpg");*/
   background-color: #333333 33;
 }
+.section-1 #header {
+  position: absolute;
+  display: block;
+  bottom: 0px;
+}
 .section-1 h1, .section-1 p {
-  color: #eeeeee;
+  margin: 20px;
+  filter: drop-shadow(1px 1px 1px black);
 }
 .section-1 h1 {
-  font-size: 48px;
+  font-size: 5em;
+  font-weight: bold;
 }
 .section-1 p {
-  font-size: 35px;
+  font-size: 2.5em;
+  font-weight: 300;
+}
+
+.section-2 {
+  background-color: #222222;
+}
+.section-2 p {
+  font-size: 2em;
 }
 
 .section-3 {
