--- a/master.css
+++ b/master.css
@@ -90,9 +90,15 @@ table {
 
 .section-2 {
   background-color: #222222;
+  display: flex;
+  flex-direction: row;
 }
 .section-2 p {
-  font-size: 2em;
+  position: relative;
+  float: left;
+  font-size: 2.25em;
+  padding: 20px;
+  margin: auto;
 }
 
 .section-3 {
