--- a/input.scss
+++ b/input.scss
@@ -13,8 +13,9 @@ $txt-subheader: 2.5em;
 
 %section {
     width: 100%;
-    height: 300pt;
+    height: 100vh;
     color: $text-col-dark;
+    display: flex;
 
 }
 
@@ -26,9 +27,9 @@ $txt-subheader: 2.5em;
     background-color:#33333333;
 
     #header {
-        position: absolute;
-        display: block;
-        bottom: 0px;
+
+
+        margin: auto;
     }        
 
     h1, p {
