--- a/master.css
+++ b/master.css
@@ -60,8 +60,9 @@ table {
 
 .section-5, .section-4, .section-3, .section-2, .section-1 {
   width: 100%;
-  height: 300pt;
+  height: 100vh;
   color: #eeeeee;
+  display: flex;
 }
 
 .section-1 {
@@ -71,9 +72,7 @@ table {
   background-color: #333333 33;
 }
 .section-1 #header {
-  position: absolute;
-  display: block;
-  bottom: 0px;
+  margin: auto;
 }
 .section-1 h1, .section-1 p {
   margin: 20px;
