--- a/input.scss
+++ b/input.scss
@@ -1,16 +1,74 @@
 @import 'reset';
+@import 'hero';
 
 $font-stack: 'Lato', Helvetica, Arial, sans;
 $text-col-dark: #eeeeee;
 $text-col-light: #333333;
-$txt-header: 5em;
-$txt-subheader: 2.5em;
+$txt-header: 7em;
+$txt-subheader: 3em;
 
 * {
     font-family: $font-stack;
     box-sizing: border-box;
 }
 
+html {
+    text-rendering: optimizeLegibility;
+}
+
+body {
+    text-align: center !important;
+}
+
+.column {
+    display: block;
+    flex-basis: 0;
+    flex-grow: 1;
+    flex-shrink: 1;
+
+}
+
+.title {
+    margin: auto;
+    font-size: $txt-header;
+    font-weight: bold;
+}
+
+.subtitle {
+    font-size: $txt-subheader;
+    font-weight: 300;
+}
+
+.about {
+    background-color: $text-col-light;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+}
+
+.columns {
+    display: flex;
+    justify-content: center;
+}
+
+section {
+    margin: auto;
+    padding: 5em;
+    height: 100vh;
+}
+
+p {
+    margin: auto;
+    font-size: 2em;
+    font-weight: 300;
+    color: white;
+    line-height: 1.5;
+    width: 60%;
+    text-align: center;
+}
+
+/*
 %section {
     width: 100%;
     height: 100vh;
@@ -19,22 +77,26 @@ $txt-subheader: 2.5em;
 
 }
 
+.header {
+    font-size: 4em;
+}
+
 .section-1 {
     @extend %section;
     
     position: relative;
-    background-image:linear-gradient(to bottom right, rgba(0, 47, 75, .7), rgba(220, 66, 37, .7)); /*,url("red-forest.jpg");*/
+    background-image:linear-gradient(to bottom right, rgba(0, 47, 75, .7), rgba(220, 66, 37, .7)); /*,url("red-forest.jpg");
     background-color:#33333333;
+    text-align:center;
 
     #header {
-
-
-        margin: auto;
-    }        
-
-    h1, p {
-        margin: 20px;
         filter: drop-shadow(1px 1px 1px black);
+        margin:auto;
+        line-height: 5em;
+    }
+    
+/*    h1, p {
+        margin: 20px;
     }
 
     h1 {
@@ -56,12 +118,11 @@ $txt-subheader: 2.5em;
 
     p {
         position: relative;
-        float: left;
-
         font-size:2.25em;
-        padding: 20px;
         margin: auto;
+
     }
+
 }
 
 .section-3 {
@@ -77,3 +138,32 @@ $txt-subheader: 2.5em;
 .section-5 {
     @extend %section;
 }
+
+.text-left {
+    position: relative;
+    display:block;
+    margin: auto;
+}
+
+.text-right {
+    display:block;
+    position: relative;
+    float: right;
+    margin: auto;
+}
+
+.button {
+    position: relative;
+    font-size: 2em;
+
+}
+
+.flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+*/
