--- a/input.scss
+++ b/input.scss
@@ -51,6 +51,17 @@ body {
     justify-content: center;
 }
 
+.hidden {
+    display: none;
+}
+
+ .section-4 {
+     position: absolute;
+     right: 1vw;
+     bottom: 1vw;
+     width: 20%;
+ }
+
 section {
     margin: auto;
     padding: 5em;
