--- a/input.scss
+++ b/input.scss
@@ -84,6 +84,7 @@ nav {
         float: right;
         font-size: $txt-subheader;
         color: #fff;
+        opacity: 0;
         transform: scale(0.6);
     }
 
@@ -103,6 +104,7 @@ nav {
     a:hover .cd-label {
         color: $text-col-light;
         opacity: 0.5;
+        transition: opacity 0.8s linear;
     }
 }
 
