--- a/master.css
+++ b/master.css
@@ -134,6 +134,7 @@ nav a span {
   float: right;
   font-size: 3em;
   color: #fff;
+  opacity: 0;
   transform: scale(0.6);
 }
 nav .cd-dot {
@@ -148,6 +149,7 @@ nav a:hover span {
 nav a:hover .cd-label {
   color: #333333;
   opacity: 0.5;
+  transition: opacity 0.8s linear;
 }
 
 p {
