--- a/input.scss
+++ b/input.scss
@@ -7,6 +7,7 @@ $text-col-light: #333333;
 $txt-header: 7em;
 $txt-subheader: 3em;
 $txt-menu: 2em;
+$background: #ffffff;
 
 * {
     font-family: $font-stack;
@@ -19,6 +20,7 @@ html {
 
 body {
     text-align: center !important;
+    background-color: $background;
 }
 
 .column {
@@ -87,7 +89,7 @@ nav {
 
     .active {
         .cd-dot {
-            background-color: greenyellow;
+            background-color: $background;
         }
     }
 
@@ -119,12 +121,13 @@ nav {
 
     .cd-dot {
         position: relative;
-        background-color: $text-col-light;
+        background-color: #555;
         top: 5px;
         height: 3em;
         width: 3em;
         transform-origin: 50% 50%;
         border-radius: 50%;
+        box-shadow: inset 0 0 7px -3px #222;
     }
 
     .cd-label {
