--- a/master.css
+++ b/master.css
@@ -74,216 +74,46 @@ body {
   background-color: #ffffff;
 }
 
-.column {
-  display: block;
-  flex-basis: 0;
-  flex-grow: 1;
-  flex-shrink: 1;
+section {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-
-.title {
-  margin: auto;
+section h1 {
   font-size: 7em;
   font-weight: bold;
 }
-
-.subtitle {
+section h2 {
   font-size: 3em;
   font-weight: 300;
 }
-
-.about {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.columns {
-  display: flex;
-  justify-content: center;
-}
-
-.hidden {
-  display: none;
-}
-
-.section-4 {
-  position: absolute;
-  right: 1vw;
-  bottom: 1vw;
-  width: 20%;
-}
-
-section {
-  margin: auto;
-  padding: 5em;
-  height: 100vh;
-  z-index: 2;
+section p {
+  font-size: 2em;
+  font-weight: 400;
 }
 
 nav {
-  font-size: 2em;
   position: fixed;
-  color: #000;
-  z-index: 1;
-  right: 40px;
   top: 50%;
-  bottom: auto;
-  transform: translateY(-50%);
+  right: 5%;
+  width: 50px;
+  z-index: 9999;
+  list-style: none;
 }
-nav li {
-  text-align: right;
-  padding: 0.6em;
-}
-nav .active .cd-dot {
-  background-color: #ffffff;
-}
-nav a {
-  display: inline-block;
-}
-nav a span {
-  float: right;
-  display: inline-block;
-  vertical-align: middle;
-  transform: scale(0.6);
-  transition: 0.5s;
-}
-nav a:hover span {
-  transform: scale(1);
-  transition: 0.5s;
-}
-nav a:hover .cd-label {
-  opacity: 0.5;
-  transition: opacity 0.6s linear;
-}
-nav .cd-dot {
+nav ul {
   position: relative;
-  background-color: #555;
-  top: 5px;
-  height: 3em;
-  width: 3em;
-  transform-origin: 50% 50%;
-  border-radius: 50%;
-  box-shadow: inset 0 0 7px -3px #222;
+  padding: 3px;
+  padding-left: 35%;
 }
-nav .cd-label {
-  opacity: 0;
-  font-size: 2em;
+nav ul li {
   position: relative;
-  margin-right: 10px;
-  padding: 0.4em 0.5em;
-  vertical-align: middle;
-  color: #333333;
-  transform-origin: 100% 50%;
+  padding-bottom: 20px;
+  padding-left: 35%;
+  color: blue;
 }
-
-p {
-  margin: auto;
-  font-size: 2em;
-  font-weight: 300;
-  line-height: 1.5;
-  width: 60%;
-  text-align: center;
-}
-
-/*
-%section {
-    width: 100%;
-    height: 100vh;
-    color: $text-col-dark;
-    display: flex;
-
-}
-
-.header {
-    font-size: 4em;
-}
-
-.section-1 {
-    @extend %section;
-
-    position: relative;
-    background-image:linear-gradient(to bottom right, rgba(0, 47, 75, .7), rgba(220, 66, 37, .7)); /*,url("red-forest.jpg");
-    background-color:#33333333;
-    text-align:center;
-
-    #header {
-        filter: drop-shadow(1px 1px 1px black);
-        margin:auto;
-        line-height: 5em;
-    }
-
-/*    h1, p {
-        margin: 20px;
-    }
-
-    h1 {
-        font-size: $txt-header;
-        font-weight: bold;
-    }
-
-    p {
-        font-size: $txt-subheader;
-        font-weight: 300;
-    }
-}
-
-.section-2 {
-    @extend %section;
-    background-color: #222222;
-    display: flex;
-    flex-direction: row;
-
-    p {
-        position: relative;
-        font-size:2.25em;
-        margin: auto;
-
-    }
-
-}
-
-.section-3 {
-    @extend %section;
-    background-color:grey;
-    display:block;
-}
-
-.section-4 {
-    @extend %section;
-}
-
-.section-5 {
-    @extend %section;
-}
-
-.text-left {
-    position: relative;
-    display:block;
-    margin: auto;
-}
-
-.text-right {
-    display:block;
-    position: relative;
-    float: right;
-    margin: auto;
-}
-
-.button {
-    position: relative;
-    font-size: 2em;
-
-}
-
-.flex {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-}
-
-*/
 
 /*# sourceMappingURL=master.css.map */
