--- a/input.scss
+++ b/input.scss
@@ -31,6 +31,7 @@ section {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    // line-height: 5em;
 
     h1 {
         font-size: $txt-header;
@@ -43,6 +44,7 @@ section {
     p {
         font-size: $txt-menu;
         font-weight: 400;
+        line-height: 1.5em;
     }
 }
 
@@ -67,3 +69,8 @@ nav {
     }
 }
 
+#copyright {
+    // position: absolute;
+    // bottom: 0px;
+    z-index: 1;
+}
