--- a/master.css
+++ b/master.css
@@ -94,6 +94,7 @@ section h2 {
 section p {
   font-size: 2em;
   font-weight: 400;
+  line-height: 1.5em;
 }
 
 nav {
@@ -114,6 +115,10 @@ nav ul li {
   padding-bottom: 20px;
   padding-left: 35%;
   color: blue;
+}
+
+#copyright {
+  z-index: 1;
 }
 
 /*# sourceMappingURL=master.css.map */
