--- a/input.scss
+++ b/input.scss
@@ -45,6 +45,7 @@ section {
         font-size: $txt-menu;
         font-weight: 400;
         line-height: 1.5em;
+        max-width: 75%;
     }
 }
 
@@ -64,7 +65,6 @@ nav {
             position: relative;
             padding-bottom: 20px;
             padding-left: 35%;
-            color: blue;
         }
     }
 }
