--- a/master.css
+++ b/master.css
@@ -95,6 +95,7 @@ section p {
   font-size: 2em;
   font-weight: 400;
   line-height: 1.5em;
+  max-width: 75%;
 }
 
 nav {
@@ -114,7 +115,6 @@ nav ul li {
   position: relative;
   padding-bottom: 20px;
   padding-left: 35%;
-  color: blue;
 }
 
 #copyright {
