--- a/input.scss
+++ b/input.scss
@@ -51,20 +51,24 @@ section {
 
 nav {
     position: fixed;
-    top: 50%;
+    top: 2%;
+    width: 15%;
     right: 5%;
-    width: 50px;
-    z-index: 9999;
     list-style: none;
+    z-index: 100;
 
     ul {
         position: relative;
+        display: flex;
         padding: 3px;
-        padding-left: 35%;
         li {
-            position: relative;
-            padding-bottom: 20px;
-            padding-left: 35%;
+            padding: 25px;
+            flex: 1 1 auto;
+
+            a {
+                font-size: 1.5em;
+                text-decoration: none;
+            }
         }
     }
 }
