--- a/master.css
+++ b/master.css
@@ -100,21 +100,24 @@ section p {
 
 nav {
   position: fixed;
-  top: 50%;
+  top: 2%;
+  width: 15%;
   right: 5%;
-  width: 50px;
-  z-index: 9999;
   list-style: none;
+  z-index: 100;
 }
 nav ul {
   position: relative;
+  display: flex;
   padding: 3px;
-  padding-left: 35%;
 }
 nav ul li {
-  position: relative;
-  padding-bottom: 20px;
-  padding-left: 35%;
+  padding: 25px;
+  flex: 1 1 auto;
+}
+nav ul li a {
+  font-size: 1.5em;
+  text-decoration: none;
 }
 
 #copyright {
