--- a/input.scss
+++ b/input.scss
@@ -53,6 +53,7 @@ nav {
     position: fixed;
     top: 2%;
     min-width: 15%;
+    max-width: 100%;;
     right: 5%;
     list-style: none;
     z-index: 100;
